src/snapshots/algonaut_uri__tests__asset_transfer.snap
---
source: src/lib.rs
expression: uri
---
address:
  - 155
  - 38
  - 1
  - 249
  - 186
  - 209
  - 197
  - 45
  - 45
  - 71
  - 255
  - 191
  - 245
  - 233
  - 69
  - 92
  - 246
  - 240
  - 66
  - 216
  - 243
  - 56
  - 146
  - 192
  - 183
  - 132
  - 183
  - 162
  - 8
  - 37
  - 22
  - 182
params:
  - Amount: 12
  - Asset: 31566704

