src/snapshots/algonaut_uri__tests__request_payment.snap
---
source: src/lib.rs
expression: uri.to_string()
---
"algorand://TMTAD6N22HCS2LKH7677L2KFLT3PAQWY6M4JFQFXQS32ECBFC23F57RYX4?amount=150500000"

