src/snapshots/algonaut_uri__tests__share_address_with_label.snap
---
source: src/lib.rs
expression: uri.to_string()
---
"algorand://TMTAD6N22HCS2LKH7677L2KFLT3PAQWY6M4JFQFXQS32ECBFC23F57RYX4?label=Silvio"

